parser/src/test/resources/corpus/valid/07_applies_all_classes.ff
rule "All Classes" {
  applies to: all share classes of fund "Acme Master"
}
