parser/src/test/resources/corpus/invalid/11_applies_missing_colon.ff
rule "Applies Missing Colon" {
  applies to fund "Acme Master"
}
